crates/symbolicator-native/tests/integration/snapshots/integration__srcsrv__pdb_with_srcsrv.snap
---
source: crates/symbolicator-native/tests/integration/srcsrv.rs
expression: response
---
stacktraces:
  - frames:
      - status: symbolicated
        original_index: 0
        instruction_addr: "0x2a1000"
        package: "C:\\projects\\breakpad-tools\\windows\\Release\\crash.exe"
        symbol: "google_breakpad::CrashGenerationClient::RequestDump(_EXCEPTION_POINTERS*, MDRawAssertionInfo*)"
        sym_addr: "0x2a1000"
        function: "google_breakpad::CrashGenerationClient::RequestDump(_EXCEPTION_POINTERS*, MDRawAssertionInfo*)"
        filename: crash_generation_client.cc
        abs_path: depot/breakpad/src/client/windows/crash_generation/crash_generation_client.cc
        lineno: 323
        revision: "12345"
modules:
  - debug_status: found
    features:
      has_debug_info: true
      has_unwind_info: true
      has_symbols: true
      has_sources: false
      srcsrv_vcs: perforce
    arch: x86
    type: pe
    code_file: "C:\\projects\\breakpad-tools\\windows\\Release\\crash.exe"
    debug_id: 3249d99d-0c40-4931-8610-f4e4fb0b6936-1
    debug_file: "C:\\projects\\breakpad-tools\\windows\\Release\\crash_with_srcsrv.pdb"
    image_addr: "0x2a0000"
    image_size: 36864
    candidates:
      - source: local
        location: "http://localhost:<port>/symbols/3249/D99D/0C40/4931/8610/F4E4FB0B6936"
        download:
          status: notfound
      - source: local
        location: "http://localhost:<port>/symbols/crash_with_srcsrv.pdb/3249D99D0C4049318610F4E4FB0B69361/crash_with_srcsrv.pd_"
        download:
          status: notfound
      - source: local
        location: "http://localhost:<port>/symbols/crash_with_srcsrv.pdb/3249D99D0C4049318610F4E4FB0B69361/crash_with_srcsrv.pdb"
        download:
          status: ok
          features:
            has_debug_info: true
            has_unwind_info: true
            has_symbols: true
            has_sources: false
            srcsrv_vcs: perforce
        debug:
          status: ok
      - source: local
        location: "http://localhost:<port>/symbols/crash_with_srcsrv.pdb/3249D99D0C4049318610F4E4FB0B69361/crash_with_srcsrv.src.zip"
        download:
          status: notfound
      - source: local
        location: "http://localhost:<port>/symbols/crash_with_srcsrv.pdb/3249D99D0C4049318610F4E4FB0B69361/crash_with_srcsrv.sym"
        download:
          status: notfound
